# clamfs

./: .cirrus.yml  .drone.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  bootstrap  circle.yml  configure.ac  fdpassing.m4  sonar-project.properties
.circleci/: config.yml
.github/actions/build-debian/: Dockerfile  entrypoint.sh
.github/actions/build-debian-oldstable/: Dockerfile
.github/actions/build-debian-stable/: Dockerfile
.github/actions/build-debian-testing/: Dockerfile
.github/actions/build-debian-unstable/: Dockerfile  entrypoint.sh
.github/actions/build-fedora-latest/: Dockerfile  entrypoint.sh
.github/actions/build-fedora-rawhide/: Dockerfile
.github/actions/build-ubuntu-devel/: Dockerfile  entrypoint.sh
.github/actions/build-ubuntu-latest/: Dockerfile
.github/actions/build-ubuntu-rolling/: Dockerfile
.github/workflows/: codeql-analysis.yml  codeql.yml  compiler-matrix.yml  debug.yml  docker.yml  doxygen.yml  main.yml  push.yml  quick.yml
debian/: Makefile.am  changelog  control  copyright  rules
doc/: Doxyfile  Doxyfile.in  Makefile.am  clamfs.1  clamfs.xml  debug.xml
doc/svg/: Makefile.am
src/: Makefile.am  clamav.cxx  clamav.hxx  clamfs.cxx  clamfs.hxx  config.cxx  config.hxx  logger.cxx  logger.hxx  mnotify.cxx  mnotify.hxx  rlog.cxx  rlog.hxx  scancache.cxx  scancache.hxx  stats.cxx  stats.hxx  utils.hxx
tests/: runtests.bash  xee-test.bats  xee-test.xml
