bin_PROGRAMS=clamfs

clamfs_SOURCES=clamfs.cxx clamfs.hxx \
               config.cxx config.hxx \
               rlog.cxx rlog.hxx \
               clamav.cxx clamav.hxx \
               scancache.cxx scancache.hxx \
               mnotify.cxx mnotify.hxx \
               stats.cxx stats.hxx \
               utils.hxx
